@@ -1,3 +1,13 @@
+(24/01/19)
+==========
+
+· Updated DXX-Rebirth to version 0.60.100
+
+(18/01/19)
+==========
+
+· Updated webmin, removepkg & others script.
+
 (14/01/18)
 ==========
 
